digistore-product-ms-k8-deployment.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: digistore-product-ms
  name: digistore-product-ms
spec:
  ports:
  - protocol: TCP
    name: "80"
    port: 80
    targetPort: 80
  selector:
    app: digistore-product-ms
  type: ClusterIP
---
apiVersion: apps/v1
kind: Deployment
metadata:
  creationTimestamp: null
  labels:
    app: digistore-product-ms
  name: digistore-product-ms
spec:
  selector:
    matchLabels:
      app: digistore-product-ms
  replicas: 1
  strategy: {}
  template:
    metadata:
      creationTimestamp: null
      labels:
        app: digistore-product-ms
    spec:
      containers:
      - name: digistore-product-ms
        image: localhost:5000/digistore/digistore-product-ms:latest
        command: ["java"]
        args: ["-Xmx128m", "-Xss1m", "-jar", "-Dconsole.level=INFO", "/opt/lib/digistore-product-ms.jar"]
        livenessProbe:
          httpGet:
            path: /product/actuator
            port: 80
            httpHeaders:
            - name: Content-Type
              value: plain/text
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /product/actuator
            port: 80
          failureThreshold: 10
          initialDelaySeconds: 10
          periodSeconds: 10
        startupProbe:
          tcpSocket:
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        imagePullPolicy: "Always"
        ports:
        - containerPort: 80
        resources:
          limits:
            cpu: "1"
            memory: "1073741824"
          requests:
            cpu: 250m
            memory: "536870912"
      restartPolicy: Always
status: {}
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: digistore-product-ms-ingress
  annotations:
    #kubernetes.io/ingress.class: nginx
spec:
  rules:
  - host: www.digistore.com
    http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: digistore-product-ms
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: digistore-frontend-ms
            port:
              number: 80
  - http:
      paths:
      - path: /product
        pathType: Prefix
        backend:
          service:
            name: digistore-product-ms
            port:
              number: 80
      - path: /
        pathType: Prefix
        backend:
          service:
            name: digistore-frontend-ms
            port:
              number: 80
